// Copyright 2017 Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pkg.aspect.config;

option go_package="config";

// Configures an individual access-logs aspect.
//
// Example usage:
//     kind: access-logs
//     params:
//        log_name: "logs/access_log"
//        log:
//            log_format: CUSTOM
//            descriptor_name: "MyCustomDescriptor"
//            labels:
//                time: response.time
//                user_agent: request.user-agent | "Mozilla/5.0"
//      inputs:
//          template: "{{.time}} {{.user_agent}}"
message AccessLogsParams {
    // Identifies a collection of related log entries.
    string log_name = 1;

    // Describes how attributes must be evaluated to produce values for a log message.
    message AccessLog {
        // AccessLogFormat specifies the format to use for generating textual log
        // entries for the accessLogger aspect of the mixer.

        //
        // Default value: COMMON.

        enum AccessLogFormat {
            // Invalid default value.
            ACCESS_LOG_FORMAT_UNSPECIFIED = 0;

            // Refers to the [Common Log Format](https://en.wikipedia.org/wiki/Common_Log_Format).
            // It is used to generate entries like:
            // `127.0.0.1 user-identifier frank [10/Oct/2000:13:55:36 -0700] "GET /apache_pb.gif HTTP/1.0" 200 2326`
            COMMON = 1;

            // Refers to the Apache [Combined Log Format](https://httpd.apache.org/docs/1.3/logs.html#combined).
            // It is used to generate entries like:
            // `127.0.0.1 user-identifier frank [10/Oct/2000:13:55:36 -0700] "GET /apache_pb.gif HTTP/1.0" 200 2326 "http://www.example.com/start.html" "Mozilla/4.08 [en] (Win98; I ;Nav)"`
            COMBINED = 2;

            // Used to enable operator-specified formats.
            CUSTOM = 99;
        }
        AccessLogFormat log_format = 1;

        // Only used if log_format is CUSTOM. Links this AccessLog to a LogEntryDescriptor
        // that describes the log's template.
        string descriptor_name = 2;

        // Map of template variable name to expression for the descriptor's log_template. At
        // run time each expression will be evaluated, and together they will provide values
        // for the log's template string.
        map<string, string> template_expressions = 3;

        // Map of LogEntryDescriptor label name to attribute expression. At run time each
        // expression will be evaluated to determine the value that will be used to fill
        // in the log template. The result of evaluating the expression must match the
        // ValueType of the label in the LogEntryDescriptor.
        map<string, string> labels = 4;
    }
    // The log that will be constructed and handed to the aspect at runtime.
    AccessLog log = 2;
}
